# I2CLib

./: .gitignore  .wakatime-project  CMakeLists.txt  LICENSE  README.md  library.json  platformio.ini
examples/basic/: basic.cpp
lib/I2C/: I2C.cpp  I2C.h
src/: main.cpp
test/: test.cpp
